# PG3-project

./: .env.example  DOCKER.md  docker-compose.yml  nginx.conf
back-end/: .dockerignore  API_REFERENCE.md  BACKEND_API.md  CORE_USAGE_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MIDDLEWARE_GUIDE.md  MIDDLEWARE_QUICK_REFERENCE.md  README.md  SERVICES_GUIDE.md  SERVICES_QUICK_REFERENCE.md  TASKS_GUIDE.md  TASKS_QUICK_REFERENCE.md  docker-entrypoint.sh  requirements.txt  setup.bat  setup.sh
back-end/api/: admin.py  filters.py  ml_utils.py  models.py  permissions.py  serializers.py  urls.py  views.py  views_new.py
back-end/backend/: settings.py  urls.py
back-end/core/: __init__.py  mixins.py  models.py  validators.py
back-end/middleware/: __init__.py  analytics_middleware.py  auth_middleware.py  error_handler.py  rate_limiting_middleware.py
back-end/services/: __init__.py  achievement_service.py  analytics_service.py  notification_service.py  recommendation_service.py  resume_service.py  skill_service.py
back-end/tasks/: __init__.py  achievement_tasks.py  analytics_tasks.py  celery.py  email_tasks.py  notification_tasks.py  recommendation_tasks.py  resume_tasks.py
back-end2/: db.sqlite3  pyproject.toml
back-end2/auth_api/: urls.py  views.py
back-end2/base/: settings.py  urls.py
back-end2/onboarding_api/: apps.py  models.py  serializers.py  urls.py  views.py
front-end/: .dockerignore  Dockerfile  package-lock.json  package.json
front-end/AI-Career/: README.md
front-end/public/: index.html
front-end/src/: CareerPlatformDesign.jsx  index.css
(+20 files in other folders)
